[workspace]
resolver = "3"
members = ["pit"]

[workspace.package]
edition = "2024"
repository = "https://github.com/LycheeLauncher/LycheeLauncher"

[workspace.dependencies]
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", default-features = false, features = ["macros"] }
anyhow = "1.0.99"

[package]
name = "lychee-launcher"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license = "GPL-3"

[dependencies]
pit = { path = "pit" }
slint = "1.12.1"
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
anyhow.workspace = true
bytes.workspace = true

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
lto = "thin"
