[workspace]
resolver = "3"
members = ["crates/backend", "crates/lychee-launcher"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
backend = { path = "crates/backend" }
lychee-launcher = { path = "crates/lychee-launcher" }

bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", default-features = false, features = ["macros"] }
anyhow = "1.0.99"

[profile.release]
lto = true
