[workspace]
resolver = "2"
members = ["crates/http", "crates/piston", "crates/lychee-launcher"]
default-members = ["crates/lychee-launcher"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
http = { path = "crates/http" }
piston = { path = "crates/piston" }
lychee-launcher = { path = "crates/lychee-launcher" }

bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", default-features = false, features = ["macros"] }
anyhow = "1.0.99"

[profile.release]
incremental = true
lto = true
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
