[package]
name = "piston"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[dependencies]
serde.workspace = true
chrono = { version = "0.4.41", default-features = false, features = [
    "alloc",
    "serde",
] }
regex = "1.11.2"

[dev-dependencies]
http.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
